--- a/ExampleTestSuite/ExampleTestSuite.csproj
+++ b/ExampleTestSuite/ExampleTestSuite.csproj
@@ -44,6 +44,9 @@
       <Name>AcceptanceTesting</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Example.feature" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
