--- a/AcceptanceTesting/AcceptanceTesting.csproj
+++ b/AcceptanceTesting/AcceptanceTesting.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyLoader.cs" />
+    <Compile Include="ConsoleLogger.cs" />
     <Compile Include="FeatureDefinitionAttribute.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestRunner.cs" />
