--- a/AcceptanceTesting/AcceptanceTesting.csproj
+++ b/AcceptanceTesting/AcceptanceTesting.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StepResult.cs" />
     <Compile Include="TestRunner.cs" />
     <Compile Include="XmlLogger.cs" />
   </ItemGroup>
