--- a/AcceptanceTesting/AcceptanceTesting.csproj
+++ b/AcceptanceTesting/AcceptanceTesting.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="FeatureDefinitionAttribute.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="MethodDefinition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StepResult.cs" />
