--- a/AcceptanceTesting/AcceptanceTesting.csproj
+++ b/AcceptanceTesting/AcceptanceTesting.csproj
@@ -50,6 +50,7 @@
     <Compile Include="MethodDefinition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StepProcessor.cs" />
     <Compile Include="StepResult.cs" />
     <Compile Include="TestRunner.cs" />
     <Compile Include="XmlLogger.cs" />
