--- a/AcceptanceTesting/AcceptanceTesting.csproj
+++ b/AcceptanceTesting/AcceptanceTesting.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="AssemblyLoader.cs" />
     <Compile Include="ConsoleLogger.cs" />
-    <Compile Include="FeatureDefinitionAttribute.cs" />
+    <Compile Include="Attributes.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MethodDefinition.cs" />
     <Compile Include="Program.cs" />
